src/lib/snapshots/hemlis_lib__parser__tests__expr_new_left_assoc_op_chains_without_parens.snap
---
source: src/lib/parser.rs
expression: "p_expr(\"a :< b :< c\")"
---
12 of 12
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Op
     Expr::Op
      Expr::Ident
       QName
        NULL
        Name
         (2, 4)->(2, 5)
      QOp
       NULL
       Op
        (2, 6)->(2, 8)
      Expr::Ident
       QName
        NULL
        Name
         (2, 9)->(2, 10)
     QOp
      NULL
      Op
       (2, 11)->(2, 13)
     Expr::Ident
      QName
       NULL
       Name
        (2, 14)->(2, 15)
===
