src/lib/snapshots/hemlis_lib__parser__tests__expr_simple.snap
---
source: src/lib/parser.rs
expression: "p_expr(\"1 + 1\")"
---
10 of 10
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Op
     Expr::Number
      Number
       (2, 4)->(2, 5)
     QOp
      NULL
      Op
       (2, 6)->(2, 7)
     Expr::Number
      Number
       (2, 8)->(2, 9)
===
