src/lib/snapshots/hemlis_lib__parser__tests__import_with_newlines.snap
---
source: src/lib/parser.rs
expression: "p_import(\"import A (foo\\n , bar\\n , baz)\")"
---
14 of 14
===
Module
 Header
  MName
   (0, 7)->(0, 13)
  NULL
   ImportDecl
    (2, 0)->(2, 6)
    MName
     (2, 7)->(2, 8)
     Import::Value
      (2, 10)->(2, 13)
      Name
       (2, 10)->(2, 13)
     Import::Value
      (3, 3)->(3, 6)
      Name
       (3, 3)->(3, 6)
     Import::Value
      (4, 3)->(4, 6)
      Name
       (4, 3)->(4, 6)
    NULL
    (4, 6)->(4, 7)
  (0, 0)->(0, 6)
  (0, 14)->(0, 19)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
===
